# saint-llm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: config.yaml
configs/data/: web_default.yaml
configs/model/: v4_flash.yaml  v4_pro.yaml
configs/training/: pretrain.yaml
configs/v0.0/: tokenizer-mix.yaml
docs/: AUGMENTATIONS.md  ROADMAP.md  STATUS.md
docs/adr/: 0000-template.md  0001-versioning-philosophy.md  0002-no-gemma-bridge.md  0003-deepseek-v4-spine.md  0004-own-bbpe-131k-tokenizer.md  0005-13-languages-with-uk-upsample.md  0006-uv-monorepo.md  0007-native-multimodal-pretrain.md  0008-letta-style-memory-tools.md  0009-grpo-baseline-and-q1-2026-revisions.md  0010-muonclip-qk-clip-for-v0-0.md  0011-umup-init-for-v0-0.md  0012-logit-softcap-and-sink-tokens-for-v0-0.md  0013-code-mode-supersedes-dsml-xml.md  0014-gspo-replaces-token-level-grpo-ratio.md  0015-dapo-four-patches.md  0016-critique-grpo-for-plateau-breaking.md  0017-adaptive-thinking-head.md  0018-v0-0-corpus-mix.md  0019-v0-0-quality-and-dedup.md  0020-regmix-mixture-optimization.md  0021-morphbpe-evaluation-gate.md  README.md
docs/specs/: v0.0.md  v0.1.md  v0.2-onward.md
experiments/: bench_quant_modes.py  run_small_flash.py  train_eval.py  train_tokenizer.py
scripts/: sync-and-test-gpu.sh
tests/: test_smoke.py
tests/integration/: test_indexer_kernel_parity.py  test_mhc_kernel_parity.py  test_moe_quant_factory.py  test_qat_training_step.py
